--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -643,7 +643,7 @@
       "companyLogoUrl": "",
       "country": "Abuja, Nigeria",
       "featured": false,
-      "name": "Ogie Ben",
+      "name": "Akinrolie Slick Shola",
       "photo": "/images/people/akin.jpg",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fpeople%2Fshola.JPG?alt=media&token=ef6c7656-a78e-4a1c-9ba5-9579a8ac9969",
       "shortBio": "Software Developer || Passionate Community Builder",
@@ -665,7 +665,7 @@
       "featured": false,
       "name": "Otobong Okoko",
       "photo": "/images/people/otobong.jpg",
-      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fpeople%2Fotobong.jpg?alt=media&token=7a2c4387-4eb8-4a6a-9747-928c2d7f0f63",
+      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fpeople%2Fotobong.jpg?alt=media&token=429dcaef-8975-40bb-b425-4d5b6af7439b",
       "shortBio": "UX Designer & Frontend Developer",
       "socials": [{
         "icon": "twitter",
@@ -681,7 +681,7 @@
       "companyLogoUrl": "",
       "country": "Abuja, Nigeria",
       "featured": false,
-      "name": "Ogie Ben",
+      "name": "Auwal MS",
       "photo": "/images/people/auwalms.jpg",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fpeople%2Faniediudo.jpg?alt=media&token=4f0cbf2e-3372-4c2f-b0e5-68b00e719442",
       "shortBio": "Passionate  Developer || Lead Program Assistant, Andela ALC",
