--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -683,7 +683,7 @@
       "featured": false,
       "name": "Auwal MS",
       "photo": "/images/people/auwalms.jpg",
-      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fpeople%2Faniediudo.jpg?alt=media&token=4f0cbf2e-3372-4c2f-b0e5-68b00e719442",
+      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fpeople%2Fauwal.jpg?alt=media&token=c199d3c3-4ab4-43ec-882d-d4cd2076cf41",
       "shortBio": "Passionate  Developer || Lead Program Assistant, Andela ALC",
       "socials": [{
         "icon": "twitter",
