--- a/data/settings.json
+++ b/data/settings.json
@@ -51,7 +51,7 @@
   ],
   "heroSettings": {
     "home": {
-      "description": "Digital Access and Inclusve Economic Growth.",
+      "description": "Digital Access and Inclusive Economic Growth.",
       "background": {
         "color": "#354DB7",
         "image": "/images/backgrounds/home.jpg"
