--- a/data/settings.json
+++ b/data/settings.json
@@ -133,7 +133,7 @@
     "pointer": {
       "latitude": 5.0116652,
       "longitude": 7.9167358,
-      "zoom": 10,
+      "zoom": 10
     },
     "mapCenter": {
       "latitude": 5.01,
