--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -697,9 +697,9 @@
       "company": "",
       "companyLogo": "",
       "companyLogoUrl": "",
-      "country": "Abuja, Nigeria",
+      "country": "Port Harcourt, Nigeria",
       "featured": false,
-      "name": "Auwal MS",
+      "name": "Theodora Isola",
       "photo": "/images/people/auwalms.jpg",
       "photoUrl": "https://firebasestorage.googleapis.com/v0/b/trend-76131.appspot.com/o/images%2Fpeople%2Ftheodoraisola.JPG?alt=media&token=87233ab5-458b-41f3-b84e-5df610d0b7f4",
       "shortBio": "Information Systems & Technology Strategist",
@@ -717,7 +717,7 @@
       "company": "",
       "companyLogo": "",
       "companyLogoUrl": "",
-      "country": "Abuja, Nigeria",
+      "country": "Bonny Island, Nigeria",
       "featured": false,
       "name": "Ume Abraham Kalu",
       "photo": "/images/people/umekalu.jpg",
@@ -725,7 +725,7 @@
       "shortBio": "Lead Organizer, GDG Bonny Island & Co - founder aihub, Bonny Island",
       "socials": [{
         "icon": "twitter",
-        "link": "https://twitter.com/umekalu",
+        "link": "https://twitter.com/#",
         "name": "Twitter"
       }],
       "title": "Co-founder Aihub"
