--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -447,7 +447,7 @@
       "title": "CEO"
     },
     "celestineomin": {
-      "bio": "Celestine Omin is a software engineer based in Lagos, Nigeria. He is currently an Engineering Manager at Paystack, a technology company solving payments problems for ambitious businesses in Africa.  Prior to Paystack, he worked as a Senior Technical Consultant at Andela, an elite engineering organization that provides companies with access to the top 1% of tech talent across the African continent. As Senior Technical Consultant, Celestine managed teams of Andela developers and works with Andela’s partner companies to understand their business goals and product roadmap. He provided technical guidance and oversight to ensure that engineering teams are running in accordance with world-class technical standards. Prior to Andela, Celestine worked at Konga, the largest online e-commerce marketplace in Nigeria with well over 20,000 merchants and $78.5M in venture funding. While at Konga, Celestine served as the lead engineer for SellerHQ, helped in migrating some of the company’s monolithic applications to micro-services, and led the development of a community forum for Konga’s merchants and customers that greatly shaped the company’s product roadmap and strategy. Outside of Andela, Celestine speaks regularly at technology conferences across Africa. He organizes and leads Africa Git Meetup, which recently featured GitLab’s Kelvin Mutuma as a guest speaker. Celestine has a bachelor in Computer Science from the University of Calabar. He blogs and shares his thoughts about startups in emerging markets, with a special focus on Nigeria and Africa, at http: //cyberomin.github.io.",
+      "bio": "Celestine Omin is a software engineer based in Lagos, Nigeria. He is currently an Engineering Manager at Paystack, a technology company solving payments problems for ambitious businesses in Africa.  Prior to Paystack, he worked as a Senior Technical Consultant at Andela, an elite engineering organization that provides companies with access to the top 1% of tech talent across the African continent. As Senior Technical Consultant, Celestine managed teams of Andela developers and works with Andela’s partner companies to understand their business goals and product roadmap. He provided technical guidance and oversight to ensure that engineering teams are running in accordance with world-class technical standards. Prior to Andela, Celestine worked at Konga, the largest online e-commerce marketplace in Nigeria with well over 20,000 merchants and $78.5M in venture funding. While at Konga, Celestine served as the lead engineer for SellerHQ, helped in migrating some of the company’s monolithic applications to micro-services, and led the development of a community forum for Konga’s merchants and customers that greatly shaped the company’s product roadmap and strategy. Outside of Andela, Celestine speaks regularly at technology conferences across Africa. He organizes and leads Africa Git Meetup, which recently featured GitLab’s Kelvin Mutuma as a guest speaker. Celestine has a bachelor in Computer Science from the University of Calabar. He blogs and shares his thoughts about startups in emerging markets, with a special focus on Nigeria and Africa, at https://cyberomin.github.io.",
       "company": "Paystack",
       "companyLogo": "",
       "companyLogoUrl": "",
@@ -462,6 +462,11 @@
           "icon": "twitter",
           "link": "https://twitter.com/cyberomin",
           "name": "Twitter"
+        },
+        {
+          "icon": "website",
+          "link": "https://cyberomin.github.io",
+          "name": "Personal Website"
         }
       ],
       "title": "Software Engineer"
